--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,14 +9,15 @@
 
 /* Reset */
 .loading {
-   width: 100%;
-   height: 100%;
+   width: 50%;
+   height: 50%;
+   height: 50%%;
    top: 0;
    left: 0;
    position: fixed;
    display: block;
    opacity: 0.7;
-   background-color: #fff;
+  /* background-color: #fff;*/
    z-index: 99;
    text-align: center;
 }
